Fixed Layout overlap

--- a/src/story/chart/chart.component.css
+++ b/src/story/chart/chart.component.css
@@ -86,6 +86,8 @@ h2 {
   width: 80%;
   margin: auto;
   text-align: justify;
+  z-index: 1;
+  position: relative;
 }
 
 .active {
